# python-package-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/python_package_template/: builder.py  math.py
tests/: test_builder.py  test_math.py
